--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,40 @@
-name: Build Kivy APK
+name: Build APK with Buildozer
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main  # atau 'master' tergantung branch default kamu
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
-    - name: Checkout Repository
-      uses: actions/checkout@v3
+      - name: 🔄 Checkout Repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: ⚙️ Install Dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            zip unzip git python3-pip \
+            openjdk-11-jdk \
+            libffi-dev libssl-dev \
+            libsqlite3-dev zlib1g-dev \
+            libncurses5-dev libbz2-dev libreadline-dev
 
-    - name: Install Buildozer & dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y build-essential ccache git zip unzip openjdk-17-jdk python3-pip libncurses5 libstdc++6 libffi-dev libssl-dev
-        pip install --upgrade pip
-        pip install buildozer cython
+      - name: 🐍 Setup Python & Buildozer
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install cython virtualenv
+          pip install buildozer
 
-    - name: Build APK
-      run: |
-        cd your_app_folder
-        buildozer init
-        buildozer -v android debug
+      - name: 📦 Build APK
+        run: |
+          buildozer android debug
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: kivy-apk
-        path: your_app_folder/bin/*.apk
+      - name: 📤 Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-debug.apk
+          path: bin/*.apk
