--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,34 @@
-name: Build APK with Buildozer
+name: Build Kivy APK
 
 on:
   push:
-    branches:
-      - main  # atau 'master' tergantung branch default kamu
+    branches: [ main ]
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     steps:
-      - name: 🔄 Checkout Repository
-        uses: actions/checkout@v3
+    - name: Checkout Repository
+      uses: actions/checkout@v3
 
-      - name: ⚙️ Install Dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y \
-            zip unzip git python3-pip \
-            openjdk-11-jdk \
-            libffi-dev libssl-dev \
-            libsqlite3-dev zlib1g-dev \
-            libncurses5-dev libbz2-dev libreadline-dev
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
 
-      - name: 🐍 Setup Python & Buildozer
-        run: |
-          python3 -m pip install --upgrade pip
-          pip install cython virtualenv
-          pip install buildozer
-
-      - name: 📦 Build APK
-        run: |
-          buildozer android debug
-
-      - name: 📤 Upload APK
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug.apk
-          path: bin/*.apk
+    - name: Install Buildozer & dependencies
+      run: |
+        sudo apt update
+        pip install --upgrade pip
+        pip install buildozer cython
+    - name: Build APK
+      run: |
+        cd your_app_folder
+        buildozer init
+        buildozer -v android debug
+    - name: Upload APK
+      uses: actions/upload-artifact@v3
+      with:
+        name: kivy-apk
+        path: your_app_folder/bin/*.apk
