--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,39 +1,21 @@
-name: Build APK
+name: Build APK with Buildozer Docker
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-
-      - name: Install dependencies
+      - name: Build APK using Buildozer Docker
         run: |
-          sudo apt update
-          sudo apt install -y zip unzip openjdk-17-jdk python3-pip
-          pip install --upgrade pip
-          pip install cython
-          pip install buildozer
-
-      - name: Install Android SDK
-        run: |
-          mkdir -p ~/.android
-          yes | sdkmanager --licenses || true
-          yes | sdkmanager "platform-tools" "platforms;android-33" "build-tools;33.0.2"
-
-      - name: Build APK
-        run: python3 -m buildozer android debug
+          docker run --rm -v $PWD:/home/user/hostcwd -w /home/user/hostcwd kivy/buildozer buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
