--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,29 +16,22 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Install dependencies
+      - name: Install build dependencies
         run: |
           sudo apt-get update
-          sudo apt-get remove -y containerd || true
           sudo apt-get install -y python3-pip git zip unzip openjdk-17-jdk
-
-      - name: Install Docker (fix containerd conflict)
-        run: |
-          sudo apt-get remove -y docker docker-engine docker.io containerd runc || true
-          curl -fsSL https://get.docker.com -o get-docker.sh
-          sh get-docker.sh
 
       - name: Pull Buildozer Docker image
         run: |
-          docker pull kivy/buildozer
+          docker pull kivy/buildozer:latest
 
-      - name: Build APK
+      - name: Build APK using Buildozer Docker
         run: |
           docker run --rm -v ${{ github.workspace }}:/home/user/hostcwd \
             -w /home/user/hostcwd \
             kivy/buildozer buildozer android debug
 
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: MyApp-APK
